chore: Update pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <junit.jupiter.version>5.10.0</junit.jupiter.version>
     <hibernate.version>6.5.2.Final</hibernate.version>
     <mysql.connector.version>8.0.33</mysql.connector.version>
+    <sonar.organization>pedro-barbosa1</sonar.organization>       
   </properties>
 
   <dependencies>
