--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,18 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+
+    <!-- Todas as versões padronizadas -->
+    <javafx.version>21.0.4</javafx.version>
     <junit.jupiter.version>5.10.0</junit.jupiter.version>
     <hibernate.version>6.5.2.Final</hibernate.version>
     <mysql.connector.version>8.0.33</mysql.connector.version>
-    <sonar.organization>pedro-barbosa1</sonar.organization>       
   </properties>
 
   <dependencies>
+    <!-- Testes -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -36,48 +39,78 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- Persistência -->
     <dependency>
       <groupId>jakarta.persistence</groupId>
       <artifactId>jakarta.persistence-api</artifactId>
       <version>3.1.0</version>
     </dependency>
+
     <dependency>
       <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>${hibernate.version}</version>
     </dependency>
+
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql.connector.version}</version>
     </dependency>
 
-<dependency>
-  <groupId>net.sf.jasperreports</groupId>
-  <artifactId>jasperreports</artifactId>
-  <version>6.21.0</version>
-</dependency>
+    <!-- JavaFX -->
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
 
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.kordamp.ikonli</groupId>
+      <artifactId>ikonli-javafx</artifactId>
+      <version>12.4.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.kordamp.ikonli</groupId>
+      <artifactId>ikonli-materialdesign2-pack</artifactId>
+      <version>12.4.0</version>
+    </dependency>
+
+    <!-- Relatórios -->
+    <dependency>
+      <groupId>net.sf.jasperreports</groupId>
+      <artifactId>jasperreports</artifactId>
+      <version>6.21.0</version>
+    </dependency>
   </dependencies>
 
   <build>
     <plugins>
+      <!-- Plugin de compilação -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
+          <release>21</release>
         </configuration>
       </plugin>
 
+      <!-- Plugin de testes -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.1.2</version>
       </plugin>
 
+      <!-- Plugin de empacotamento -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -86,16 +119,17 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>br.upe.Main</mainClass>
+              <mainClass>br.upe.MainFX</mainClass>
             </manifest>
           </archive>
         </configuration>
       </plugin>
 
+      <!-- Cobertura -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.8</version>
+        <version>0.8.10</version>
         <executions>
           <execution>
             <goals>
@@ -111,6 +145,28 @@
           </execution>
         </executions>
       </plugin>
+
+      <!-- Plugin JavaFX -->
+      <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.8</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>br.upe.MainFX</mainClass>
+          <options>
+            <!-- Inclui os módulos necessários manualmente -->
+            <option>--add-modules=javafx.controls,javafx.fxml</option>
+          </options>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 </project>
