--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
+                    <source>21</source>
+                    <target>21</target>
                     <release>21</release>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
