Feat: tela principal

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <junit.jupiter.version>5.10.0</junit.jupiter.version>
         <hibernate.version>6.5.2.Final</hibernate.version>
         <mysql.connector.version>8.0.33</mysql.connector.version>
+        <javafx.version>21.0.1</javafx.version>
         <sonar.organization>tarecoemariola</sonar.organization>
     </properties>
 
@@ -60,6 +61,23 @@
             <version>6.21.0</version>
         </dependency>
 
+        <!-- JavaFX Dependencies -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -87,9 +105,19 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>br.upe.Main</mainClass>
+                            <mainClass>br.upe.MainApp</mainClass>
                         </manifest>
                     </archive>
+                </configuration>
+            </plugin>
+
+            <!-- JavaFX Maven Plugin -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>br.upe.MainApp</mainClass>
                 </configuration>
             </plugin>
         </plugins>
