feature: testfx added

--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,26 @@
   </properties>
 
   <dependencies>
-    <!-- Testes -->
+    <!-- Testes unitários -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Testes de integração -->
+    <dependency>
+      <groupId>org.testfx</groupId>
+      <artifactId>testfx-core</artifactId>
+      <version>4.0.16-alpha</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.testfx</groupId>
+      <artifactId>testfx-junit5</artifactId>
+      <version>4.0.16-alpha</version>
       <scope>test</scope>
     </dependency>
 
