--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,24 @@
   <dependencies>
     <!-- Testes -->
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>${junit.jupiter.version}</version>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>5.10.2</version> <!-- ou outra 5.x recente -->
+        <scope>test</scope>
+    </dependency>
+
+  <!-- Mockito -->
+  <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.11.0</version> <!-- ou outra 5.x recente -->
       <scope>test</scope>
+  </dependency>
+
+    <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-swing</artifactId>
+        <version>${javafx.version}</version>
     </dependency>
 
     <!-- Persistência -->
@@ -44,19 +58,19 @@
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>${javafx.version}</version>
+      <version>22</version>
     </dependency>
 
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
-      <version>${javafx.version}</version>
+      <version>22</version>
     </dependency>
 
     <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-graphics</artifactId>
-        <version>${javafx.version}</version>
+        <version>22</version>
     </dependency>
 
     <dependency>
@@ -71,6 +85,22 @@
       <version>12.4.0</version>
     </dependency>
 
+    <!-- TestFX Core -->
+    <dependency>
+        <groupId>org.testfx</groupId>
+        <artifactId>testfx-core</artifactId>
+        <version>4.0.16-alpha</version>
+        <scope>test</scope>
+    </dependency>
+
+    <!-- TestFX JUnit5 -->
+    <dependency>
+        <groupId>org.testfx</groupId>
+        <artifactId>testfx-junit5</artifactId>
+        <version>4.0.16-alpha</version>
+        <scope>test</scope>
+    </dependency>
+
     <!-- Relatórios -->
     <dependency>
       <groupId>net.sf.jasperreports</groupId>
@@ -79,82 +109,93 @@
     </dependency>
   </dependencies>
 
-  <build>
+<build>
     <plugins>
-      <!-- Plugin de compilação -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
-        <configuration>
-          <release>21</release>
-        </configuration>
-      </plugin>
 
-      <!-- Plugin de testes -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.1.2</version>
-      </plugin>
+        <!-- Plugin de compilação -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
+            <configuration>
+                <release>21</release>
+            </configuration>
+        </plugin>
 
-      <!-- Plugin de empacotamento -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.3.0</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <mainClass>br.upe.MainFX</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
-      </plugin>
+        <!-- Plugin de empacotamento -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.3.0</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <addClasspath>true</addClasspath>
+                        <mainClass>br.upe.MainFX</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
 
-      <!-- Cobertura -->
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.10</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>report</id>
-            <phase>test</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+        <!-- Cobertura -->
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.10</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>report</id>
+                    <phase>test</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
 
-      <!-- Plugin JavaFX -->
-      <plugin>
+    <!-- Plugin JavaFX -->
+    <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <executions>
-          <execution>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
+            <execution>
+                <goals>
+                    <goal>run</goal>
+                </goals>
+            </execution>
         </executions>
         <configuration>
-          <mainClass>br.upe.MainFX</mainClass>
-          <options>
-            <!-- Inclui os módulos necessários manualmente -->
-            <option>--add-modules=javafx.controls,javafx.fxml</option>
-          </options>
+            <mainClass>br.upe.MainFX</mainClass>
+            <options>
+                <option>--add-modules=javafx.controls,javafx.fxml,javafx.swing</option>
+            </options>
         </configuration>
-      </plugin>
+    </plugin>
 
+        <!-- Plugin de testes -->
+        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+        <configuration>
+            <forkCount>1</forkCount>
+            <reuseForks>false</reuseForks>
+            <argLine>
+            -Dprism.order=sw
+            -Dtestfx.robot=glass
+            -Dglass.platform=Monocle
+            -Dmonocle.platform=Headless
+            -Djava.awt.headless=true
+            </argLine>
+        </configuration>
+        </plugin>
     </plugins>
-  </build>
+</build>
+
 </project>
